@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 02:38:44 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 02:43:56 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -36,5 +36,11 @@
   <description>aespa即將推出新迷你專輯aespa將於10月21日推出第五張迷你專輯官方已經上傳了一系列的預告內容包括六首歌曲的片段和一個專門的網站讓粉絲可以混合和下載主打歌曲的部分這張專輯的...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 02:38:44 +0800</pubDate>
+</item><item>
+  <title>戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美</title>
+  <link>https://www.famechos.me/news/戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美.html</link>
+  <description>Yena的新單曲NemoNemo呈現出巧妙的愛情隱喻Yena帶著她的第三張單曲專輯NemoNemo回歸距離她在一月份發行GoodMorning已經八個月了這張專輯的名稱源自韓語中的正方形一詞用來隱喻愛情的複雜情感Yena表示每個人都有不同的愛情定義或表達...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 02:43:56 +0800</pubDate>
 </item></channel>
 </rss>
