@@ -1,0 +1,273 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6200\u611b\u7684\u8907\u96dc\u60c5\u611f\uff01Yena\u65b0\u55ae\u66f2\u300aNemo Nemo\u300b\u5de7\u5999\u96b1\u55bb\u611b\u60c5\u7684\u50b7\u8207\u7f8e", "description": "\u6200\u611b\u7684\u8907\u96dc\u60c5\u611f\uff01Yena\u65b0\u55ae\u66f2\u300aNemo Nemo\u300b\u5de7\u5999\u96b1\u55bb\u611b\u60c5\u7684\u50b7\u8207\u7f8e", "url": "https://www.famechos.me/news/\u6200\u611b\u7684\u8907\u96dc\u60c5\u611f\uff01Yena\u65b0\u55ae\u66f2\u300aNemo Nemo\u300b\u5de7\u5999\u96b1\u55bb\u611b\u60c5\u7684\u50b7\u8207\u7f8e.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T02:43:50.730098+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美.html"/>
+<meta name="description" content="Yena最新單曲《Nemo Nemo》探索戀愛的複雜情感，巧妙隱喻愛情的傷與美。">
+
+<meta name="keywords" content="Yena,Nemo Nemo,戀愛,情感,愛情,傷害,美麗,音樂,新單曲">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美.html" />
+        <meta property="og:title" content="戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美" />
+        <meta property="og:description" content="戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美" />
+        <meta property="twitter:description" content="戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>Yena帶著她的第三張單曲專輯《Nemo Nemo》回歸，距離她在一月份發行《Good Morning》已經八個月了。這張專輯的名稱源自韓語中的“正方形”一詞，用來隱喻愛情的複雜情感。</p>
+<p>Yena表示，每個人都有不同的愛情定義或表達方式，這張專輯用正方形作為隱喻來代表這種感覺。同名主打歌《Nemo Nemo》是一首電子舞曲，歌詞詼諧有趣，描述了戀愛時的美好時刻和互相傷害的感覺。</p>
+<table>
+<tr>
+<th>專輯名稱</th>
+<th>主打歌</th>
+</tr>
+<tr>
+<td>Nemo Nemo</td>
+<td>Nemo Nemo</td>
+</tr>
+</table>
+<p>Yena表示，這張專輯的聲音靈感來自她過去喜歡聽的音樂，例如T-ARA、애프터스쿨和橙子焦糖的歌曲。主打歌帶有懷舊的感覺，但以她的風格呈現。</p>
+<p>Block B成員兼製作人禹智皓（Zico）參與了主打歌的歌詞創作。Yena回憶道，她喜歡主打歌的旋律，但找不到合適的歌詞，於是向禹智皓求助，他迅速想出了機智的歌詞。</p>
+<p>對於自己的音樂事業，Yena強調了享受當下的重要性。她表示，當她在舞台上時，最重要的是她要感到快樂，觀眾可以感受到那種能量，所以她必須真正享受表演。</p>
+<ul>
+<li>Yena曾作為IZ*ONE成員成名</li>
+<li>2021年4月IZ*ONE解散後，她於2022年1月推出首張個人迷你專輯《Smiley》</li>
+</ul>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MPp8hbuZwW0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩.html">韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？.html">BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動.html">睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
