@@ -56,4 +56,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T02:43:56+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
